# LeviLaunchroid

./: JAVACONNECT_RUNTIME_PATCH.md
.github/workflows/: android.yml
app/: build.gradle
app/java-runtime/: README.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  javaconn_java_exec.cpp
app/src/main/cpp/inbuiltmods/: CMakeLists.txt
app/src/main/java/org/levimc/launcher/core/minecraft/: Application.kt
app/src/main/java/org/levimc/launcher/core/mods/inbuilt/manager/: InbuiltModManager.java
app/src/main/java/org/levimc/launcher/core/mods/inbuilt/overlay/: InbuiltOverlayManager.java
app/src/main/java/org/levimc/launcher/ui/util/: InbuiltModConfigHelper.java
app/src/main/res/values/: strings.xml
